Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49203

Assertion occurs when closing qquicknanobrowser

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Alpha
    • WebEngine
    • None
    • Ubuntu 14.04, Qt 5.6 developer build
    • 6d6707c8c390216ac2f69b5771d14ee9141b19d2

      "Gtk: IA__gtk_widget_hide: assertion 'GTK_IS_WIDGET (widget)' failed" appears when files are selected in dialogs right after the QuickNanoBrowser is closed. I got this assertion in debug mode.

      Steps to reproduce:
      1, Run ./examples/webengine/quicknanobrowser/quicknanobrowser
      2, Go to http://www.w3schools.com/tags/tryit.asp?filename=tryhtml_input_accept
      3, Choose file or just cancel the file dialog
      4, Close quicknanobrowser

      Result:
      [1103/032403:FATAL:browser_main_loop.cc(253)] Gtk: IA__gtk_widget_hide: assertion 'GTK_IS_WIDGET (widget)' failed [6/1912]

      I attached the corresponding backtrace.

      It seems the problem is that the QGtkDialogHelper::hide() function is called twice. First one is when the dialog is closed, the second one is in ~QQuickPlatformFileDialog destructor.
      Maybe QGtk2Dialog::hide should not be called in ~QQuickPlatformFileDialog if It was already called it before.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            kadam Adam Kallai
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes